# torchlit

./: .gitignore  Dockerfile.dev  LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml  test_ws.py  ws_test.py
.github/workflows/: release.yml
devtools/: black.sh  clean_pycache.sh
examples/: example.py
frontend/: package-lock.json  package.json
frontend/src/: index.css  types.ts
frontend/src/components/: Dashboard.tsx  MetricChart.tsx
test/: real_test.py  train_cifar10_resnet18_streamlit.py
torchlit/: __init__.py  launch.py  monitor.py
torchlit/backend/: main.py
torchlit/cli/: Cargo.toml
torchlit/cli/src/: main.rs
torchlit/frontend/: package-lock.json  package.json
torchlit/frontend/src/: index.css  types.ts
torchlit/frontend/src/components/: ComparisonTable.tsx  Dashboard.tsx  GlobalProgressBar.tsx  MetricChart.tsx  ModelExplorer.tsx  Sparkline.tsx
torchlit/storage/: __init__.py  io.py
torchlit/tracker/: __init__.py  tracker.py
torchlit/web/: Home.py  __init__.py  app.py  ui.py
torchlit/web/assets/: home_intro.md  sidebar_brand.css
torchlit/web/pages/: Inspector.py  Training.py  inspector.py
