[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-lit"
version = "0.2.0"
description = "A lightweight real-time ML training monitor."
readme = "README.md"
authors = [
    { name="ChanLumerico" }
]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "psutil",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "websockets>=10.4",
    "pydantic>=2.0.0",
]

[tool.setuptools]
packages = ["torchlit", "torchlit.backend", "torchlit.frontend", "torchlit.bin"]

[tool.setuptools.package-data]
"torchlit.frontend" = ["dist/**/*"]
"torchlit.bin" = ["torchlit-progress-*"]

[project.urls]
Homepage = "https://github.com/ChanLumerico/torchlit"
