[package]
name = "torchlit-progress"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "torchlit-progress"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
strip = true
lto = true
